<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/creditsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:gravity="center"
        android:text="@string/thanks_popup"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/creditsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/credits"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/creditsPressToClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:gravity="center"
        android:text="@string/press_to_close"
        android:textSize="12sp" />
</LinearLayout>